--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,15 +13,18 @@
         <div class="logo">
             <h1>Shops mart</h1>
         </div>
-        <div class="menu">
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Como funciona</a></li>
-                    <li><a href="#">Características</a></li>
-                </ul>
-            </nav>
-        </div>
+            <div class="menu">
+                <nav>
+                    <span id="burguer" class="material-symbols-outlined">
+                        menu
+                        </span>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Como funciona</a></li>
+                        <li><a href="#">Características</a></li>
+                    </ul>
+                </nav>
+            </div>
     </header>
 
     <section class="produto">
@@ -28,9 +32,10 @@
             <img src="imagens/liquidificador-mondial-premium-red-l1000-com-12-velocidades-e-1000w-vermelho-11439300.jpg" alt="lidifiquador">
         </div>
         <div class="descriçao">
-            <div class="descriçao_title">
-                <h1>Lidifiquador <br> Multifuncional <br> Mondial</h1>
-            </div>
+                <div class="descriçao_title">
+                    <h1>Lidifiquador <br> Multifuncional <br> Mondial</h1>
+                </div>
+                <span>SC-1589</span>
             <div class="descriçao_list">
                 <ul>
                     <li>3000 watts motor de alta capacidade</li>
