--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </style>
 </head>
 <body>
@@ -15,6 +16,9 @@
         </div>
         <div class="menu">
             <nav>
+                <span id="menuMobile" class="material-symbols-outlined">
+                    menu
+                    </span>
                 <ul>
                     <li><a href="#product">Home</a></li>
                     <li><a href="#como_funciona">Como funciona</a></li>
@@ -106,5 +110,17 @@
             Copyright &copy;2022. Criado por  <a href="https://github.com/ViniciusDosReis" target="_blank">-Vinicius-</a>. Todos os Direitos reservados
         </div>
     </footer>
+
+    <script>
+        window.onload = function(){
+            document.querySelector("#menuMobile").addEventListener("click", function(){
+                if(document.querySelector(".menu nav ul").style.display == 'flex') {
+                    document.querySelector(".menu nav ul").style.display = 'none';
+                } else {
+                    document.querySelector(".menu nav ul").style.display = 'flex';
+                }
+            })
+        }
+    </script>
 </body>
 </html>
