atualizando margem em footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </address>
         <div class="copy">
-            Copyright &copy;2022. Criado por  <a href="https://github.com/ViniciusDosReis" target="_blank">-Vinicius-</a>. Todos os Direitos reservados
+            <p>Copyright &copy;2022. Criado por  <a href="https://github.com/ViniciusDosReis" target="_blank">-Vinicius-</a>. Todos os Direitos reservados</p>
         </div>
     </footer>
 
